[package]
name = "rsc"
description = "Rusty smart cleaner is a Rusty File Cleaner, cross-platform Rust tool for cleaning operating system files."
repository = "https://github.com/thewh1teagle/rsc"
authors = ["thewh1teagle"]
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1.0.80"
clap = { version = "4.5.1", features = ["derive"] }
env_logger = "0.11.2"
ignore = "0.4.22"
log = "0.4.20"

walkdir = "2.4.0"

[dev-dependencies]
tempfile = "3.10.0"
