[package]
name = "rsc"
description = "Rusty smart cleaner is a cross-platform Rust tool for cleaning operating system files."
repository = "https://github.com/thewh1teagle/rsc"
homepage = "https://thewh1teagle.github.io/rsc/"
authors = ["thewh1teagle"]
version = "0.2.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1.0.80"
clap = { version = "4.5.1", features = ["derive"] }
env_logger = "0.11.2"
ignore = "0.4.22"
log = "0.4.20"

walkdir = "2.4.0"

[dev-dependencies]
tempfile = "3.10.0"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.10.0"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = ["shell", "powershell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = [
    "aarch64-apple-darwin",
    "x86_64-apple-darwin",
    "x86_64-unknown-linux-gnu",
    "x86_64-pc-windows-msvc",
]
# Publish jobs to run in CI
pr-run-mode = "plan"
